fix: window controls out of screen and shift on hover

--- a/modules/bottombar.css
+++ b/modules/bottombar.css
@@ -1,9 +1,11 @@
 /* === BOTTOMBAR === */
 
 /* bottombar */
-/* #zen-appcontent-navbar-wrapper{
-  margin-right: 10px !important;
-  margin-left: 10px !important;
+/* :root:not([zen-single-toolbar="true"]){
+  #zen-appcontent-navbar-wrapper{
+    margin-right: 10px !important;
+    margin-left: 10px !important;
+  }
 } */
 
 /* ====== WEBVIEW WRAPPER ADJUSTMENTS FOR MULTI TOOLBAR ====== */
@@ -18,24 +20,24 @@
 
 /* URL bar position preference - BOTTOM (default) */
 @media not (-moz-bool-pref: "wireframe.urlbar.position.top") {
-  #zen-appcontent-wrapper {
-    flex-direction: column-reverse;
-  }
+    #zen-appcontent-wrapper {
+      flex-direction: column-reverse;
+    }
 
-  :root[zen-right-side="true"]:not([zen-compact-mode="true"]):not([inDOMFullscreen="true"]) #zen-tabbox-wrapper {
-    margin-top: var(--na-window-margin) !important;
-    margin-left: var(--na-window-margin) !important;
-    margin-right: 0 !important;
-    margin-bottom: 0 !important;
-  }
+    :root[zen-right-side="true"]:not([zen-compact-mode="true"]):not([inDOMFullscreen="true"]) #zen-tabbox-wrapper {
+      margin-top: var(--na-window-margin) !important;
+      margin-left: var(--na-window-margin) !important;
+      margin-right: 0 !important;
+      margin-bottom: 0 !important;
+    }
 
-  :root:not([zen-right-side="true"]):not([zen-compact-mode="true"]):not([inDOMFullscreen="true"]) #zen-tabbox-wrapper {
-    margin-top: var(--na-window-margin) !important;
-    margin-left: 0 !important;
-    margin-right: var(--na-window-margin) !important;
-    margin-bottom: 0 !important;
+    :root:not([zen-right-side="true"]):not([zen-compact-mode="true"]):not([inDOMFullscreen="true"]) #zen-tabbox-wrapper {
+      margin-top: var(--na-window-margin) !important;
+      margin-left: 0 !important;
+      margin-right: var(--na-window-margin) !important;
+      margin-bottom: 0 !important;
+    }
   }
-}
 }
 
 
@@ -43,24 +45,38 @@
   border: 0px solid var(--na-color-border) !important;
   border-radius: 0px !important;
   border-color: var(--na-color-border) !important;
-  margin-left: 0px !important;
-  margin-right: 10px !important;
-  padding-inline: 10px !important;
+  margin-inline: 0px !important;
+/*   padding-inline: 10px !important; */
+  box-sizing: border-box !important;
   transition: padding-inline 0.3s normal;
   order: 1 !important;
 }
 
-/* hide bottombar elements */
+#nav-bar-customization-target {
+  padding-inline: 10px !important;
+  transition: padding-inline 0.3s normal !important;
+}
+
+/* padding for controls reverse */
+@media (-moz-pref("wireframe.controls.reverse")){
+  :root:not([zen-single-toolbar="true"]){
+    #zen-appcontent-navbar-wrapper{
+      padding-right: 10px !important;
+    }
+  }
+}
+
+/* ====== BOTTOMBAR REVEAL ON HOVER ====== */
 @media not (-moz-pref("zen.view.use-single-toolbar")) {
   @media (-moz-pref("wireframe.toolbar.hide")) {
     #zen-appcontent-navbar-container #identity-box,
     #zen-appcontent-navbar-container #page-action-buttons,
+    #zen-appcontent-navbar-container #zen-copy-url-button,
     #zen-appcontent-navbar-container #tracking-protection-icon-container,
     #zen-appcontent-navbar-container .toolbarbutton-1 {
       visibility: collapse !important;
     }
 
-    /* Define the triggers that should reveal elements */
     :root:not(:has(.tabbrowser-tab[selected][busy])):is(
       :has(#customization-content-container:hover),
       :has(toolbarpaletteitem:active),
@@ -69,20 +85,34 @@
       :has(#unified-extensions-button[open]),
       :has(#zen-appcontent-navbar-container:hover),
       :has(#zen-appcontent-navbar-container[has-popup-menu]),
-      :has(panelmultiview > .panel-viewcontainer[panelopen="true"]) /* <<< FIX */
+      :has(panelmultiview > .panel-viewcontainer[panelopen="true"])
     ) {
-      #zen-appcontent-navbar-container {
+
+      /* now reveal by adjusting child instead of wrapper */
+      #nav-bar-customization-target{
         padding-inline: 0px !important;
       }
 
       #zen-appcontent-navbar-container #identity-box,
       #zen-appcontent-navbar-container #page-action-buttons,
+      #zen-appcontent-navbar-container #zen-copy-url-button,
       #zen-appcontent-navbar-container #tracking-protection-icon-container,
       #zen-appcontent-navbar-container .toolbarbutton-1 {
         visibility: visible !important;
       }
     }
   }
+}
+
+#titlebar {
+  flex-shrink: 0 !important;
+  position: relative;
+  z-index: 10;
+}
+
+#zen-appcontent-navbar-container {
+  min-width: 0 !important;
+  flex: 0 0 auto !important;
 }
 
 
